撤回对config及限制输入的修改

--- a/apps/cli/assets/config/mis.yaml
+++ b/apps/cli/assets/config/mis.yaml
@@ -15,46 +15,39 @@ fetchJobs:
     # 周期的cron表达式
     cron: "10 */10 * * * *"
 
-# 周期性同步scow与调度器(如slurm)账户用户封锁状态的配置
-periodicSyncUserAccountBlockStatus:
-  # 是否开启
-  enabled: true
-  # 周期的cron表达式
-  cron: "0 4 * * *"
-
 # 预定义的充值类型
 predefinedChargingTypes:
   - 测试
 
 # 创建账户时，账户名的规则。不设置就没有限制
-accountNamePattern:
+# accountNamePattern:
   # 正则表达式
-  regex: "^a_[a-z0-9]{0,18}$"
+  # regex: ""
 
-  # 出错时的消息，对应上面的正则表达式
+  # 出错时的消息
   # 此文本支持国际化
-  errorMessage: "要求输入以a_开头，长度最长为20个字符，后面只能接小写字母或数字的字符串"
+  # errorMessage: ""
 
 # 创建用户相关配置
-createUser:
+# createUser:
 
   # 是否允许用户从SCOW中创建用户
-  enabled: true
+  # enabled: true
 
   # SCOW中创建用户界面是使用内置的（builtin）或者使用外置页面（external）
   # 默认builtin
-  type: builtin
+  # type: builtin
 
   # 内置创建用户界面配置
-  builtin:
+  # builtin:
     # 用户ID的格式
-    userIdPattern:
+    # userIdPattern:
       # 正则表达式
-      regex: "^[a-z][a-z0-9_]{2,19}$"
+      # regex: ""
 
       # 出错时的消息
       # 此文本支持国际化
-      errorMessage: "要求输入长度为3-20位，由小写字母、数字、下划线组成，且以小写字母开头的字符串"
+      # errorMessage: ""
 
   # 外置页面配置
   # external:
