refactor: 重构编辑文件大小限制和 languageMap 导出方式

--- a/apps/cli/assets/config/portal.yaml
+++ b/apps/cli/assets/config/portal.yaml
@@ -43,9 +43,11 @@ homeText:
 # 是否启用终端功能
 shell: true
 
-# 文件编辑大小限制
-# 可接受的格式为nginx的client_max_body_size可接受的值
-# fileEditSize: "1m"
+# # 文件编辑功能
+# fileEdit:
+#   # 文件编辑大小限制
+#   # 可接受的格式为nginx的client_max_body_size可接受的值，默认为 1m
+#   limitSize: "1m"
 
 # 提交作业的默认工作目录。使用{{ name }}代替作业名称。相对于用户的家目录
 # submitJobDefaultPwd: scow/jobs/{{ name }}
