--- a/apps/auth/config/common.yaml
+++ b/apps/auth/config/common.yaml
@@ -11,9 +11,10 @@ passwordPattern:
 # 1.systemLanguage对象类型
 # systemLanguage:
 #   # 可选，默认为true。
-#   # 如果true，则SCOW在用户未手动选择语言时，自动根据cookie, header等判断语言，如判断失败使用default语言
-#   # 如果为false，则SCOW首次进入系统时使用下方配置的default语言
-#   autoDetect: true
+#   # 如果true，则SCOW在用户未手动选择语言时，自动优先根据cookies, 其次根据浏览器header判断语言，判断失败使用下方配置的default语言。
+#   # 如果为false，则SCOW在首次进入系统用户未手动选择语言时使用下方配置的default语言，
+#   # 用户手动选择过语言之后优先从cookies中进行判断，cookies不存在合法语言信息则使用下方配置的默认语言。
+#   autoDetectWhenUserNotSet: true
 #   # 默认语言，选填。
 #   # 类型必须为当前系统合法语言["zh_cn"，"en"]的字符串枚举值
 #   # 若没有配置，则默认为"zh_cn"
