--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -1,8 +1,8 @@
 # 管理系统数据库的信息。可以不修改
 db:
-  host: 172.16.20.124
+  host: 192.168.88.100
   password: must!chang3this
-  port: 3306
+  port: 3308
   user: root
   dbName: scow
 
@@ -27,17 +27,13 @@ accountNamePattern:
   regex: "(a_)[a-z]+$"
 
   # 出错时的消息
-  errorMessage:
-      i18n:
-        default: "必须以 'a_' 开头并以小写字母结尾：(a_)[a-z]+$"
-        en: "must start with 'a_' and end with lowercase letters:(a_)[a-z]+$"
-        zh_cn: "必须以 'a_' 开头并以小写字母结尾：(a_)[a-z]+$"
+  # errorMessage: ""
 
 createUser:
   # 创建用户时，用户ID的规则。不设置就没有限制
   userIdPattern:
     # 正则表达式
-    regex: "^[a-zA-Z]\\w{2,19}$"
+    regex: "^[a-zA-Z0-9_]+$"
     # 出错时的消息
     errorMessage: "只能由字母、下划线、数字组成"
     # errorMessage:
