feat: 修改 code review 建议

--- a/renovate.json
+++ b/renovate.json
@@ -25,9 +25,7 @@
     },
     {
       "matchPackagePatterns": [
-        "next",
-        "@monaco-editor/react",
-        "monaco-editor"
+        "next"
       ],
       "enabled": false
     },
