--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -45,8 +45,7 @@
     "nodemailer": "6.9.4",
     "qrcode": "1.5.3",
     "speakeasy": "2.0.0",
-    "react-typed-i18n": "2.3.0",
-    "dayjs": "1.11.9"
+    "react-typed-i18n": "2.3.0"
   },
   "devDependencies": {
     "@types/asn1": "0.2.1",
