feat: 添加外部自定义认证系统

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -42,7 +42,7 @@ server {
   }
 
   location ~ ^${BASE_PATH}/auth/public/(.*) {
-    set $auth ${AUTH_INTERNAL_URL};
+    set $auth ${AUTH_URL};
     proxy_pass $auth/public/$1?$args;
 
     include includes/headers;
