--- a/apps/cli/assets/install.yaml
+++ b/apps/cli/assets/install.yaml
@@ -46,35 +46,39 @@
 #   #   misServer: 127.0.0.1:7571
 
 # 认证系统相关配置。可选，不配置为默认配置
-# auth:
-#   # redis镜像。默认为redis:alpine
-#   redisImage: redis:alpine
+auth:
+  # redis镜像。默认为redis:alpine
+  redisImage: redis:alpine
 
-#   # 端口映射。只对内置认证系统有效
-#   # portMappings:
-#   #   # redis的6379端口。不填写则不映射
-#   #   # redis: 127.0.0.1:6379
-#   #   # 认证系统的5000端口，不填写则不映射
-#   #   # auth: 127.0.0.1:5001
+  # 端口映射。只对内置认证系统有效
+  # portMappings:
+  #   # redis的6379端口。不填写则不映射
+  #   # redis: 127.0.0.1:6379
+  #   # 认证系统的5000端口，不填写则不映射
+  #   # auth: 127.0.0.1:5001
 
-#   # 自定义认证系统。默认使用内置认证系统
-#   # 如果使用内置认证系统，将此部分注释掉
-#   custom:
-#     # 自定义认证系统镜像名。必填
-#     # image: my-custom-auth:v1.0
+  # 自定义认证系统。默认使用内置认证系统
+  # 如果使用内置认证系统，将此部分注释掉
+  custom:
+    # 自定义认证系统类型
+    type: external
+    external:
+      url: http://10.129.227.58/
+    # 自定义认证系统镜像名。必填
+    # image: my-custom-auth:v1.0
 
-#     # 端口映射。可选
-#     # ports:
-#     #   - "5000:5000"
+    # 端口映射。可选
+    # ports:
+    #   - "5000:5000"
 
-#     # 更多挂载卷。可选
-#     # 默认添加/etc/hosts:/etc/hosts和./config:/etc/scow
-#     # volumes:
-#     #   - "./myfile:/etc/myfile"
+    # 更多挂载卷。可选
+    # 默认添加/etc/hosts:/etc/hosts和./config:/etc/scow
+    # volumes:
+    #   - "./myfile:/etc/myfile"
 
-#     # 环境变量，可选。
-#     # environment:
-#     #   - DEBUG=log
+    # 环境变量，可选。
+    # environment:
+    #   - DEBUG=log
 
 # 审计系统相关配置。默认不部署
 # audit:
