--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -36,6 +36,7 @@
     "@ddadaal/tsgrpc-common": "0.2.4",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@grpc/grpc-js": "1.9.5",
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
