--- a/docs/package.json
+++ b/docs/package.json
@@ -20,11 +20,11 @@
   "dependencies": {
     "@docusaurus/core": "3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
-    "@mdx-js/react": "1.6.22",
+    "@mdx-js/react": "3.0.0",
     "clsx": "2.0.0",
-    "prism-react-renderer": "1.3.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "prism-react-renderer": "2.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@cmfcmf/docusaurus-search-local": "1.1.0"
   },
   "devDependencies": {
@@ -33,11 +33,12 @@
     "@docusaurus/module-type-aliases": "3.0.0",
     "@scow/config": "workspace:*",
     "@sinclair/typebox": "0.31.1",
-    "@tsconfig/docusaurus": "2.0.0",
+    "@tsconfig/docusaurus": "2.0.2",
     "@docusaurus/types": "3.0.0",
-    "@types/react": "18.0.18",
+    "@types/react": "18.2.37",
     "typescript": "5.1.6",
-    "@node-rs/jieba": "1.7.2"
+    "@node-rs/jieba": "1.7.2",
+    "unist-util-visit": "5.0.0"
   },
   "browserslist": {
     "production": [
