--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -3,12 +3,11 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NEXT_PUBLIC_USE_MOCK=1 TS_NODE_PROJECT=tsconfig.server.json node --watch -r ts-node/register -r tsconfig-paths/register server/index.ts",
-    "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 TS_NODE_PROJECT=tsconfig.server.json node --watch -r ts-node/register -r tsconfig-paths/register server/index.ts",
-    "serve": "node build/server/index.js",
-    "build": "node scripts/copyMonacoToPublic.js && npm run build:next && npm run build:ts",
+    "dev": "cross-env NEXT_PUBLIC_USE_MOCK=1 next dev",
+    "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 next dev",
+    "serve": "next start",
+    "build": "node scripts/copyMonacoToPublic.js && npm run build:next",
     "build:next": "next build",
-    "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "test": "jest --passWithNoTests",
     "client": "ntar client",
     "prepareDev": "node scripts/copyMonacoToPublic.js"
@@ -19,9 +18,7 @@
     "next.config.js",
     "config.js",
     "assets",
-    "api-routes-schemas.json",
-    "!**/*.map",
-    "build"
+    "!**/*.map"
   ],
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
@@ -57,9 +54,8 @@
     "http-proxy": "1.18.1",
     "less": "4.2.0",
     "mime-types": "2.1.35",
-    "next": "13.4.10",
+    "next": "14.0.3",
     "next-compose-plugins": "2.2.1",
-    "next-transpile-modules": "10.0.1",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
     "react": "18.2.0",
@@ -94,7 +90,8 @@
     "node-mocks-http": "1.13.0",
     "postcss": "8.4.31",
     "ts-log": "2.2.5",
-    "webpack": "5.89.0"
+    "webpack": "5.89.0",
+    "fs-extra": "11.1.1"
   },
   "peerDependencies": {
     "monaco-editor": "0.44.0"
