--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -90,6 +90,7 @@
     "@types/styled-components": "5.1.30",
     "@types/url-join": "4.0.3",
     "@types/ws": "8.5.9",
+    "fs-extra": "^11.1.1",
     "jest-environment-jsdom": "29.7.0",
     "node-mocks-http": "1.13.0",
     "postcss": "8.4.31",
