--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -35,6 +35,9 @@
     "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@grpc/grpc-js": "1.9.11",
     "@monaco-editor/react": "^4.6.0",
     "@scow/config": "workspace:*",
