fix: nginx error

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -1,6 +1,6 @@
 server {
 
-  server_name ${server_name};
+  server_name ${ALLOWED_SERVER_NAME};
 
   resolver ${RESOLVER} valid=10s;
   resolver_timeout 5s;
