--- a/dev/vagrant/config/auth.yml
+++ b/dev/vagrant/config/auth.yml
@@ -1,7 +1,7 @@
 # 指定使用认证类型为LDAP
 authType: ldap
 
-redisUrl: 172.16.20.124:6379
+redisUrl: 192.168.88.100:6379
 
 allowedCallbackHostnames:
   - localhost
@@ -63,7 +63,7 @@ otp:
 # 在此部分输入LDAP的配置
 ldap:
   # LDAP服务器地址。必填
-  url: ldap://172.16.20.124
+  url: ldap://192.168.88.101
 
   # 进行LDAP操作的用户DN。默认为空
   bindDN: cn=Manager,ou=hpc,o=pku
@@ -169,40 +169,39 @@ ui:
       # 登录界面 slogan 文字颜色
       color: "white"
       # 登录界面 slogan title
-      # title: "开源算力中心门户和管理平台"
-      title:
-        i18n:
-          default: "开源算力中心门户和管理平台"
-          en: "Open source computing power center portal and management platform"
-          zh_cn: "开源算力中心门户和管理平台"
+      title: "开源算力中心门户和管理平台"
+      # title:
+      #   i18n:
+      #     default: "开源算力中心门户和管理平台"
+      #     zh_cn: "开源算力中心门户和管理平台"
       # 多条 slogan 文本
-      # texts:
-      #   - "图形化界面，使用方便"
-      #   - "功能丰富，管理简单"
-      #   - "一体化部署，开箱即用"
-      #   - "标准化平台，支持算力融合"
-      #   - "开源中立，独立自主"
       texts:
-        - i18n:
-            default: "图形化界面，使用方便"
-            en: "Graphical user interface, user-friendly"
-            zh_cn: "图形化界面，使用方便"
-        - i18n:
-            default: "功能丰富，管理简单"
-            en: "Feature-rich, easy management"
-            zh_cn: "功能丰富，管理简单"
-        - i18n:
-            default: "一体化部署，开箱即用"
-            en: "Integrated deployment, ready to use out of the box"
-            zh_cn: "一体化部署，开箱即用"
-        - i18n:
-            default: "标准化平台，支持算力融合"
-            en: "Standardized platform, supporting compute integration"
-            zh_cn: "标准化平台，支持算力融合"
-        - i18n:
-            default: "开源中立，独立自主"
-            en: "Open-source neutrality, independent and autonomous"
-            zh_cn: "开源中立，独立自主"
+        - "图形化界面，使用方便"
+        - "功能丰富，管理简单"
+        - "一体化部署，开箱即用"
+        - "标准化平台，支持算力融合"
+        - "开源中立，独立自主"
+      #   texts:
+      #     - i18n:
+      #         default: "图形化界面，使用方便"
+      #         en: "Graphical user interface, user-friendly"
+      #         zh_cn: "图形化界面，使用方便"
+      #     - i18n:
+      #         default: "功能丰富，管理简单"
+      #         en: "Feature-rich, easy management"
+      #         zh_cn: "功能丰富，管理简单"
+      #     - i18n:
+      #         default: "一体化部署，开箱即用"
+      #         en: "Integrated deployment, ready to use out of the box"
+      #         zh_cn: "一体化部署，开箱即用"
+      #     - i18n:
+      #         default: "标准化平台，支持算力融合"
+      #         en: "Standardized platform, supporting compute integration"
+      #         zh_cn: "标准化平台，支持算力融合"
+      #     - i18n:
+      #         default: "开源中立，独立自主"
+      #         en: "Open-source neutrality, independent and autonomous"
+      #         zh_cn: "开源中立，独立自主"
       #     - i18n:
       #         default: "体验账号/密码如下，欢迎试用体验SCOW各项功能"
       #         en: "Trial account details are as follows; you are welcome to try and experience the functionalities of SCOW."
