--- a/libs/protos/scow/package.json
+++ b/libs/protos/scow/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "private": true,
   "scripts": {
-    "generate": "rimraf generated && buf generate --template buf.gen.yaml node_modules/@scow/grpc-api",
+    "generate": "rimraf generated && buf generate --template buf.gen.yaml node_modules/@scow/grpc-api && buf generate --template connect.buf.gen.yaml node_modules/@scow/grpc-api",
     "build": "rimraf build && tsc"
   },
   "files": [
@@ -16,6 +16,7 @@
     "@grpc/grpc-js": "1.9.11",
     "long": "5.2.3",
     "protobufjs": "7.2.5",
+    "@bufbuild/protobuf": "1.4.2",
     "@scow/grpc-api": "workspace:*"
   },
   "devDependencies": {
