--- a/apps/ai-server/tsconfig.json
+++ b/apps/ai-server/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "build",
+    "declaration": true,
     "baseUrl": ".",
     "paths": {
       "src/*": [
