fix: 修复 callbackUrl 无法根据请求的网络协议切换 http 和 https 的问题

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -2,6 +2,8 @@ server {
 
   server_name ${ALLOWED_SERVER_NAME};
 
+  proxy_set_header X-Forwarded-Proto $scheme;
+
   resolver ${RESOLVER} valid=10s;
   resolver_timeout 5s;
 
