--- a/apps/ai-web/package.json
+++ b/apps/ai-web/package.json
@@ -23,7 +23,7 @@
     "report:html": "pnpm test:compose-up && ((c8 ava && c8 report --reporter=html) ; pnpm test:compose-down)",
     "ci": "c8 ava && c8 report --reporter=json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
-    "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
+    "ormCreate": "dotenv -e env/.env.dev -- npx ts-node mikro-orm migration:create"
   },
   "mikro-orm": {
     "useTsNode": true,
@@ -33,10 +33,8 @@
     ]
   },
   "dependencies": {
-    "@trpc/client": "10.44.1",
-    "@trpc/next": "10.44.1",
-    "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.44.1",
+    "@ant-design/cssinjs": "1.17.0",
+    "@ant-design/icons": "5.2.6",
     "@mikro-orm/cli": "5.9.4",
     "@mikro-orm/core": "5.9.4",
     "@mikro-orm/migrations": "5.9.4",
@@ -46,41 +44,45 @@
     "@scow/lib-decimal": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.10",
-    "styled-components": "6.0.7",
-    "react-is": "18.2.0",
+    "@trpc/client": "10.44.1",
+    "@trpc/next": "10.44.1",
+    "@trpc/react-query": "10.44.1",
+    "@trpc/server": "10.44.1",
     "antd": "5.8.6",
-    "@ant-design/cssinjs": "1.17.0",
     "dayjs": "1.11.9",
+    "dotenv": "16.3.1",
+    "http-proxy": "1.18.1",
+    "lodash": "4.17.21",
+    "long": "5.2.3",
+    "mime-types": "2.1.35",
     "next": "14.0.3",
+    "next-connect": "1.0.0",
+    "nookies": "2.5.2",
+    "nprogress": "0.2.0",
+    "protobufjs": "7.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "3.22.2",
-    "@ant-design/icons": "5.2.6",
-    "protobufjs": "7.2.5",
-    "nookies": "2.5.2",
+    "react-is": "18.2.0",
     "simstate": "3.0.1",
+    "styled-components": "6.0.7",
+    "superjson": "2.2.1",
+    "ws": "8.13.0",
     "xterm": "5.2.1",
     "xterm-addon-fit": "0.7.0",
-    "ws": "8.13.0",
-    "long": "5.2.3",
-    "nprogress": "0.2.0",
-    "mime-types": "2.1.35",
-    "http-proxy": "1.18.1",
-    "superjson": "2.2.1",
-    "next-connect": "1.0.0",
-    "lodash": "4.17.21"
+    "zod": "3.22.2"
   },
   "devDependencies": {
+    "@types/http-proxy": "1.17.11",
+    "@types/mime-types": "2.1.1",
     "@types/node": "18.17.14",
+    "@types/nprogress": "0.2.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/styled-components": "5.1.26",
+    "@types/ws": "8.5.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "typescript": "5.2.2",
-    "@types/styled-components": "5.1.26",
-    "@types/nprogress": "0.2.0",
-    "@types/mime-types": "2.1.1",
-    "@types/http-proxy": "1.17.11",
-    "@types/ws": "8.5.5"
+    "ts-node": "10.9.1",
+    "typescript": "5.2.2"
   }
 }
