fix: 修复 callbackUrl 固定为 http 的问题 (#1021)
如果配置了代理转发 https 请求到 scow 并且配置了禁止 http 访问，由于 callbackUrl 固定为
http，导致登陆后跳转出现无法访问的问题。

在 chrome 不会有这个问题，应该是浏览器做了处理，[Towards HTTPS by
default](https://blog.chromium.org/2023/08/towards-https-by-default.html)
在 edge 系的浏览器中会有问题，似乎需要用户手动开启自动升级为 [What Is Automatic HTTPS? How to
Enable It in Microsoft
Edge](https://www.makeuseof.com/enable-automatic-https-microsoft-edge/#:~:text=To%20switch%20on%20Automatic%20HTTPS,support%20HTTPS%20option%20by%20default)

所以增加 scow 配置访问的协议来修改 callbackUrl 的 protocol

--- a/apps/cli/assets/install.yaml
+++ b/apps/cli/assets/install.yaml
@@ -136,6 +136,10 @@
 
 # 网关配置
 # gateway:
+#   # scow 访问协议，将影响 callbackUrl 的 protocol
+#   # callbackUrl 默认访问协议为 http
+#   # protocol: "http"
+
 #   # 限制整个系统上传（请求）文件的大小。默认1G
 #   # 可接受的格式为nginx的client_max_body_size可接受的值
 #   uploadFileSizeLimit: 1G
