初步增加导航，集成UI

--- a/apps/ai-web/package.json
+++ b/apps/ai-web/package.json
@@ -12,15 +12,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "demo": "./quick-demo.sh",
     "lint": "next lint",
     "lint:types": "tsc --noEmit",
-    "test:compose-up": "docker compose -f docker-compose.test.yml up --wait --remove-orphans",
-    "test:compose-down": "docker compose -f docker-compose.test.yml down",
-    "test": "pnpm test:compose-up && (ava ; pnpm test:compose-down)",
-    "coverage": "pnpm test:compose-up && (c8 ava ; pnpm test:compose-down)",
-    "report:html": "pnpm test:compose-up && ((c8 ava && c8 report --reporter=html) ; pnpm test:compose-down)",
-    "ci": "c8 ava && c8 report --reporter=json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
     "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
   },
@@ -32,22 +25,27 @@
     ]
   },
   "dependencies": {
-    "@ant-design/cssinjs": "1.17.0",
+    "@ant-design/cssinjs": "1.17.2",
     "@ant-design/icons": "5.2.6",
     "@mikro-orm/cli": "5.9.4",
     "@mikro-orm/core": "5.9.4",
     "@mikro-orm/migrations": "5.9.4",
     "@mikro-orm/mysql": "5.9.4",
+    "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@scow/config": "workspace:*",
+    "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-operation-log": "workspace:*",
+    "@scow/lib-ssh": "workspace:*",
+    "@scow/lib-web": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.10",
     "@trpc/client": "10.44.1",
     "@trpc/next": "10.44.1",
     "@trpc/react-query": "10.44.1",
     "@trpc/server": "10.44.1",
-    "antd": "5.8.6",
+    "antd": "5.11.2",
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "http-proxy": "1.18.1",
@@ -63,8 +61,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-typed-i18n": "2.3.0",
     "simstate": "3.0.1",
-    "styled-components": "6.0.7",
+    "styled-components": "6.1.1",
     "superjson": "2.2.1",
     "swagger-ui-react": "5.10.3",
     "trpc-openapi": "1.2.0",
@@ -74,18 +73,30 @@
     "zod": "3.22.2"
   },
   "devDependencies": {
-    "@types/http-proxy": "1.17.11",
-    "@types/mime-types": "2.1.1",
-    "@types/node": "18.17.14",
-    "@types/nprogress": "0.2.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@types/styled-components": "5.1.26",
-    "@types/swagger-ui-react": "^4.18.3",
-    "@types/ws": "8.5.5",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "@ddadaal/next-typed-api-routes-cli": "0.9.1",
+    "@next/bundle-analyzer": "14.0.3",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/react": "14.1.2",
+    "@types/busboy": "1.5.3",
+    "@types/google-protobuf": "3.15.10",
+    "@types/mime-types": "2.1.4",
+    "@types/node": "20.9.2",
+    "@types/nprogress": "0.2.3",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@types/styled-components": "5.1.30",
+    "@types/url-join": "4.0.3",
+    "@types/ws": "8.5.9",
+    "@types/swagger-ui-react": "4.18.3",
+    "fs-extra": "11.1.1",
+    "jest-environment-jsdom": "29.7.0",
+    "node-mocks-http": "1.13.0",
+    "postcss": "8.4.31",
+    "ts-log": "2.2.5",
+    "webpack": "5.89.0",
+    "@types/http-proxy": "1.17.14"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
