初始化一个可以写业务的版本

--- a/apps/ai-web/package.json
+++ b/apps/ai-web/package.json
@@ -53,12 +53,14 @@
     "long": "5.2.3",
     "mime-types": "2.1.35",
     "next": "14.0.3",
+    "next-compose-plugins": "2.2.1",
     "next-connect": "1.0.0",
     "nextjs-cors": "^2.1.2",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
     "protobufjs": "7.2.5",
     "react": "18.2.0",
+    "react-async": "10.0.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-typed-i18n": "2.3.0",
