升级vagrant适配器和相关配置

--- a/deploy/vagrant/scow/scow-deployment/install.yaml
+++ b/deploy/vagrant/scow/scow-deployment/install.yaml
@@ -1,6 +1,6 @@
 port: 80
 basePath: /
-image: mirrors.pku.edu.cn/pkuhpc/scow/scow
+#image: mirrors.pku.edu.cn/pkuhpc/scow/scow
 imageTag: master
 portal:
   basePath: /
