--- a/deploy/vagrant/scow/scow-deployment/config/apps/app1.yaml
+++ b/deploy/vagrant/scow/scow-deployment/config/apps/app1.yaml
@@ -1,20 +1,25 @@
 # 这个应用的ID
-id: vscode
+id: emacs
 
 # 这个应用的名字
-name: VSCode
+name: emacs
 
-logoPath: /apps/vscode.png
+logoPath: /apps/emacs.png
 
-# 指定应用类型为web
-type: web
-# 可以运行这个应用的节点地址。
+# 指定应用类型，vnc或者web
+type: vnc
+
+# 可以运行这个应用的节点地址
 # 如果不设置nodes，则所有节点都可以运行
-#nodes:
-#  - cn1
-#  - cn2
-#  - cn3
-#  - cn4
+# nodes:
+#   - t001
+#   - t002
+
+# VNC应用的配置
+vnc:
+  # 此X Session的xstartup脚本
+  xstartup: |
+    emacs -mm
 
 # Web应用的配置
 web:
@@ -25,8 +30,8 @@ web:
 
   # 运行任务的脚本。可以使用准备脚本定义的
   script: |
-    PASSWORD=$PASSWORD /data/software/code-server/bin/code-server -vvv --bind-addr 0.0.0.0:$PORT --auth password
-  proxyType: relative
+    PASSWORD=$PASSWORD code-server -vvv --bind-addr 0.0.0.0:$PORT --auth password
+
   # 如何连接应用
   connect:
     method: POST
