--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "dev": "next dev",
+    "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -27,11 +28,11 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.17.2",
     "@ant-design/icons": "5.2.6",
+    "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@mikro-orm/cli": "5.9.4",
     "@mikro-orm/core": "5.9.4",
     "@mikro-orm/migrations": "5.9.4",
     "@mikro-orm/mysql": "5.9.4",
-    "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
@@ -41,6 +42,7 @@
     "@scow/lib-web": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.10",
+    "@tanstack/react-query": "4.33.0",
     "@trpc/client": "10.44.1",
     "@trpc/next": "10.44.1",
     "@trpc/react-query": "10.44.1",
@@ -81,22 +83,22 @@
     "@testing-library/react": "14.1.2",
     "@types/busboy": "1.5.3",
     "@types/google-protobuf": "3.15.10",
+    "@types/http-proxy": "1.17.14",
     "@types/mime-types": "2.1.4",
     "@types/node": "20.9.2",
     "@types/nprogress": "0.2.3",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "@types/styled-components": "5.1.30",
+    "@types/swagger-ui-react": "4.18.3",
     "@types/url-join": "4.0.3",
     "@types/ws": "8.5.9",
-    "@types/swagger-ui-react": "4.18.3",
     "fs-extra": "11.1.1",
     "jest-environment-jsdom": "29.7.0",
     "node-mocks-http": "1.13.0",
     "postcss": "8.4.31",
     "ts-log": "2.2.5",
-    "webpack": "5.89.0",
-    "@types/http-proxy": "1.17.14"
+    "webpack": "5.89.0"
   },
   "volta": {
     "extends": "../../package.json"
