初始化增加文件管理后端服务

--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -28,6 +28,7 @@
     "@ant-design/cssinjs": "1.17.2",
     "@ant-design/icons": "5.2.6",
     "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
+    "@grpc/grpc-js": "1.9.11",
     "@mikro-orm/cli": "5.9.4",
     "@mikro-orm/core": "5.9.4",
     "@mikro-orm/migrations": "5.9.4",
@@ -57,8 +58,10 @@
     "next-compose-plugins": "2.2.1",
     "next-connect": "1.0.0",
     "nextjs-cors": "^2.1.2",
+    "node-ssh": "13.1.0",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
+    "pino": "8.16.2",
     "protobufjs": "7.2.5",
     "react": "18.2.0",
     "react-async": "10.0.1",
