--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -9,11 +9,12 @@
     "build"
   ],
   "scripts": {
-    "dev": "cross-env NEXT_PUBLIC_USE_MOCK=1 next dev",
+    "dev": "dotenv -e env/.env.dev -- node --watch --loader ts-paths-esm-loader server/index.ts",
     "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 next dev",
     "build": "next build",
     "build:next": "cross-env BUILDING=1 next build",
-    "start": "next start",
+    "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
+    "serve": "node build/server/index.js",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
     "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
   },
