--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -42,6 +42,13 @@ createUser:
     #     en: "Must consist of characters, including numbers, letters, and underscores."
     #     zh_cn: "只能由字母、下划线、数字组成"
 
+# 集群监控配置
+# clusterMonitor:
+#   # 是否开启，默认为 false
+#   enabled: true
+#   # 协议 + ip/域名 + 端口，默认为 http://127.0.0.1:4000
+#   grafanaUrl: "http://127.0.0.1:4000"
+
 # # 新增导航链接相关配置
 # navLinks:
 #   # 链接名
