--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -29,7 +29,8 @@
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
     "react-is": "18.2.0",
-    "nookies": "2.5.2"
+    "nookies": "2.5.2",
+    "react-async": "10.0.1"
   },
   "devDependencies": {
     "antd": "5.11.2",
