fix webpack config

--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -29,8 +29,8 @@
     "@ant-design/cssinjs": "1.17.2",
     "@ant-design/icons": "5.2.6",
     "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
-    "@ddadaal/tsgrpc-common": "0.2.5",
     "@ddadaal/tsgrpc-client": "0.17.7",
+    "@ddadaal/tsgrpc-common": "0.2.5",
     "@grpc/grpc-js": "1.9.11",
     "@mikro-orm/cli": "5.9.4",
     "@mikro-orm/core": "5.9.4",
@@ -41,11 +41,11 @@
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
+    "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/lib-web": "workspace:*",
-    "@scow/utils": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
-    "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.10",
     "@tanstack/react-query": "4.33.0",
     "@trpc/client": "10.44.1",
@@ -102,6 +102,7 @@
     "@types/ws": "8.5.9",
     "fs-extra": "11.1.1",
     "jest-environment-jsdom": "29.7.0",
+    "nextjs-node-loader": "1.1.5-alpha.0",
     "node-mocks-http": "1.13.0",
     "postcss": "8.4.31",
     "ts-log": "2.2.5",
