feat(mis): 新增数据统计功能 (#825)
### 新增：
1. 管理系统新增平台数据统计页面，统计内容如下：
    - 总用户数量，总账户数量，总租户数量，总作业数，总消费数
    - 筛选时间内 新增用户数，新增账户数，新增租户数，新增作业数，新增消费数
    - 筛选时间内，新增用户数每日统计，活跃用户数每日统计（用户是否活跃根据是否产生操作日志判断）
    - 筛选时间内，消费账户top10统计，消费金额每日统计，充值账户top10统计，充值金额每日统计
    - 筛选时间内，提交作业数top10用户统计，新增作业每日统计
    - 筛选时间内，使用portal功能次数统计（维度仅限于操作日志统计的操作类型），使用mis功能次数统计


![image](https://github.com/PKUHPC/SCOW/assets/130351655/4bb4f6f6-c690-4399-b7fd-3ad4a5bf43ab)


![image](https://github.com/PKUHPC/SCOW/assets/130351655/08d6461d-987b-49f0-8bd3-c3050e5ede61)


![image](https://github.com/PKUHPC/SCOW/assets/130351655/31f3aa3f-d18b-477e-b15c-634092c815a0)

2. scow db里新增TABLE `query_cache`，表结构如下

![image](https://github.com/PKUHPC/SCOW/assets/130351655/a204b918-1e5c-4929-93e8-d56c84b49e7a)

该表主要用于缓存时间统计页面中时间消耗较长的接口, 如：
- getTopChargeAccount
- getDailyCharge
- getTopPayAccount
- getDailyPay
- getTopSubmitJobUsers
- getNewJobCount

缓存方案：
1. 调用以上接口时，将接口方法以及传参作为key查询query_cache中的query_key,
如果有结果，直接返回该条数据的query_result作为接口返回，如果没有，则查询真实的表，并将该结果缓存在query_cache表中
2. 设置定时任务，每天零点清除一次query_cache表，将缓存删除。

--- a/apps/audit-server/package.json
+++ b/apps/audit-server/package.json
@@ -33,8 +33,10 @@
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-operation-log": "workspace:*",
     "@scow/utils": "workspace:*",
     "@scow/protos": "workspace:*",
+    "dayjs": "1.11.9",
     "pino": "8.16.2",
     "pino-pretty": "10.2.3"
   },
