--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -32,8 +32,8 @@
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
-    "@scow/protos": "workspace:*",
     "@scow/lib-web": "workspace:*",
+    "@scow/protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
@@ -51,6 +51,7 @@
     "react-async": "10.0.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "recharts": "^2.7.3",
     "simstate": "3.0.1",
     "styled-components": "6.1.1",
     "tslib": "2.6.2",
