--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -5,6 +5,7 @@ db:
   port: 3308
   user: root
   dbName: scow
+  debug: true
 
 authUrl: http://localhost:5000
 
@@ -111,3 +112,4 @@ createUser:
 
 # 自定义可查询消费类型
 # customChargeTypes: ["月租", "存储费"]
+
