--- a/apps/ai/env/.env.dev
+++ b/apps/ai/env/.env.dev
@@ -1,5 +1,2 @@
-USE_MOCK=false
-NODE_ENV=development
-TS_NODE_PROJECT=tsconfig.server.json
-AGENT_SSL_ENABLED=false
-SERVER_URL=localhost:5006
+DB_HOST=localhost
+DB_NAME=scow_server
