--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -45,6 +45,7 @@
     "@scow/lib-web": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/utils": "workspace:*",
+    "@scow/rich-error-model": "workspace:*",
     "@sinclair/typebox": "0.31.10",
     "@tanstack/react-query": "4.33.0",
     "@trpc/client": "10.44.1",
