--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -31,6 +31,14 @@ server {
     include includes/websocket;
   }
 
+  location ${BASE_PATH}${AI_PATH} {
+    set $ai_path_url ${AI_PATH_INTERNAL_URL};
+    proxy_pass $ai_path_url;
+
+    include includes/headers;
+    include includes/websocket;
+  }
+
   location ${BASE_PATH}${VNC_PATH} {
     proxy_pass ${NOVNC_INTERNAL_URL};
 
