--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -33,6 +33,9 @@
     "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/sortable": "8.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@grpc/grpc-js": "1.9.11",
     "@monaco-editor/react": "^4.6.0",
     "@scow/config": "workspace:*",
@@ -80,6 +83,7 @@
     "@testing-library/react": "14.1.2",
     "@types/busboy": "1.5.3",
     "@types/google-protobuf": "3.15.10",
+    "@types/http-proxy": "1.17.14",
     "@types/mime-types": "2.1.4",
     "@types/node": "20.9.2",
     "@types/nprogress": "0.2.3",
@@ -93,8 +97,7 @@
     "node-mocks-http": "1.13.0",
     "postcss": "8.4.31",
     "ts-log": "2.2.5",
-    "webpack": "5.89.0",
-    "@types/http-proxy": "1.17.14"
+    "webpack": "5.89.0"
   },
   "peerDependencies": {
     "monaco-editor": "0.44.0"
