--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -11,9 +11,10 @@
   "scripts": {
     "dev": "cross-env NEXT_PUBLIC_USE_MOCK=1 next dev",
     "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 next dev",
-    "serve": "next start",
+    "serve": "./launch.sh",
+    "serve:next": "next start",
     "build": "npm run build:next",
-    "build:next": "cross-env BUILDING=1 next build",
+    "build:next": "cross-env BUILDING=1 NEXT_PUBLIC_BASE_PATH=/@BASE_PATH@ next build",
     "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
     "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
