--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,17 @@
       "--proto_path=./protos"
     ],
   },
-  "buf.binaryPath": "node_modules/@bufbuild/buf/bin/buf"
+  "buf.binaryPath": "node_modules/@bufbuild/buf/bin/buf",
+  "cSpell.words": [
+    "trpc"
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
 }
