feat(mis-web): 管理系统新增集群监控功能 (#1044)
管理系统新增集群监控功能
1. 新增资源信息页面，通过嵌入 grafana 查看集群信息
支持直接嵌入 grafana 或通过代理的方式将请求转发到 grafana

![image](https://github.com/PKUHPC/SCOW/assets/140392039/70dbd318-5dc8-4f04-a9d6-d6fc90b5b89c)

2. 新增告警日志页面，通过 grafana api 获取告警日志信息

![image](https://github.com/PKUHPC/SCOW/assets/140392039/25228d35-82a4-4731-993a-63f9edb828f0)

--- a/apps/cli/assets/config/mis.yaml
+++ b/apps/cli/assets/config/mis.yaml
@@ -61,6 +61,22 @@ createUser:
     # 外置页面URL
     # url: http://your-create-user-page.com
 
+# # 集群监控配置
+# clusterMonitor:
+#   # 协议 + ip/域名 + 端口，默认为 http://127.0.0.1:4000
+#   grafanaUrl: "http://172.16.20.125:4000"
+#   # 资源状态相关配置
+#   resourceStatus:
+#     # 是否开启资源状态，默认不开启
+#     enabled: false
+#     # 是否使用代理的方式
+#     proxy: false
+#     # 默认面板 id,默认设置为 shZOtO4Sk
+#     dashboardUid: "shZOtO4Sk"
+#   # 告警日志配置
+#   alarmLogs:
+#     # 是否开启告警日志，默认不开启
+#     enabled: false
 
 # # 新增导航链接相关配置
 # navLinks:
