--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -56,6 +56,7 @@
     "styled-components": "6.1.1",
     "tslib": "2.6.2",
     "typescript": "5.2.2",
+    "http-proxy": "1.18.1",
     "@ant-design/cssinjs": "1.17.2",
     "react-typed-i18n": "2.3.0",
     "csv-stringify": "6.4.4"
