--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -43,6 +43,23 @@ createUser:
     #     en: "Must consist of characters, including numbers, letters, and underscores."
     #     zh_cn: "只能由字母、下划线、数字组成"
 
+# # 集群监控配置
+# clusterMonitor:
+#   # 协议 + ip/域名 + 端口，默认为 http://127.0.0.1:4000
+#   grafanaUrl: "http://172.16.20.125:4000"
+#   # 资源状态相关配置
+#   resourceStatus:
+#     # 是否开启资源状态，默认不开启
+#     enabled: false
+#     # 是否使用代理的方式
+#     proxy: false
+#     # 默认面板 id,默认设置为 shZOtO4Sk
+#     dashboardUid: "shZOtO4Sk"
+#   # 告警日志配置
+#   alarmLogs:
+#     # 是否开启告警日志，默认不开启
+#     enabled: false
+
 # # 新增导航链接相关配置
 # navLinks:
 #   # 链接名
