fix db and base path

--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -18,7 +18,7 @@
     "serve": "node start.mjs",
     "serve:next": "next start",
     "build": "npm run build:next",
-    "build:next": "cross-env BUILDING=1 NEXT_PUBLIC_BASE_PATH=/@BASE_PATH@ next build",
+    "build:next": "rimraf .next.backup && cross-env BUILDING=1 NEXT_PUBLIC_BASE_PATH=/@BASE_PATH@ next build",
     "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
     "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
@@ -52,11 +52,11 @@
     "@scow/utils": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
     "@sinclair/typebox": "0.31.10",
-    "@tanstack/react-query": "4.33.0",
-    "@trpc/client": "10.44.1",
-    "@trpc/next": "10.44.1",
-    "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.44.1",
+    "@tanstack/react-query": "4.36.1",
+    "@trpc/client": "10.45.0",
+    "@trpc/next": "10.45.0",
+    "@trpc/react-query": "10.45.0",
+    "@trpc/server": "10.45.0",
     "antd": "5.11.2",
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
