--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -21,7 +21,8 @@
     "build:next": "rimraf .next.backup && cross-env BUILDING=1 NEXT_PUBLIC_BASE_PATH=/@BASE_PATH@ next build",
     "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
-    "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create"
+    "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create",
+    "ormUp": "dotenv -e env/.env.dev -- npx mikro-orm migration:up"
   },
   "mikro-orm": {
     "useTsNode": true,
