--- a/dev/vagrant/config/ai.yaml
+++ b/dev/vagrant/config/ai.yaml
@@ -8,7 +8,7 @@ db:
 url: localhost:5007
 
 harborConfig:
-  url: http://10.129.227.64/
+  url: 10.129.227.64
   project: test
   user: admin
   password: icode@2023CS
