--- a/dev/vagrant/config/ai.yaml
+++ b/dev/vagrant/config/ai.yaml
@@ -5,10 +5,52 @@ db:
   password: mysqlrootpassword
   dbName: scow_ai
 
-url: localhost:5007
-
 harborConfig:
   url: 10.129.227.64
   project: test
   user: admin
   password: icode@2023CS
+
+
+# # 新增导航链接相关配置
+# navLinks:
+#   # 链接名
+#   - text: "一级导航1"
+#     # 链接地址，一级导航链接地址为可选填，二级导航链接地址为必填
+#     # url: ""
+#     # 是否打开新的页面，可选填，默认值为false
+#     # openInNewPage: true
+#     # 图标路径，可选填
+#     iconPath: ""
+#     # 可以看到这个链接的用户,可选填
+#     # 用户类型： user, accountUser, accountAdmin, accountOwner, tenantFinance, tenantAdmin, platformAdmin, platformFinance
+#     # allowedRoles: []
+#     # 二级导航,可选填
+#     children:
+#       # 二级导航相关配置，与一级导航相同，但是url为必填配置，同时不允许再设置children
+#       - text: "二级导航1"
+#         url: "https://hahahaha1.1.com"
+#         # openInNewPage: true
+#         iconPath: ""
+#         # allowedRoles: [tenantFinance]
+#       - text: "二级导航2"
+#         url: "https://hahahaha1.2.com"
+#         # openInNewPage: true
+#         iconPath: ""
+#         # allowedRoles: [tenantAdmin, platformAdmin]
+#       - text: "二级导航3"
+#         url: "https://hahahaha1.3.com"
+#         # openInNewPage: true
+#         iconPath: ""
+#         allowedRoles: [user]
+#         # allowedRoles: [tenantAdmin, platformAdmin]
+#   - text: "一级导航2"
+#     url: "https://hahahaha3.com"
+#     # openInNewPage: true
+#     iconPath: ""
+#     #allowedRoles: [user]
+#     children:
+#       - text: "二级导航1"
+#         url: "https://hahahaha3.1.com"
+#         # openInNewPage: true
+#         iconPath: ""
