feat: Update placeholders and make algorithm and dataset optional

--- a/dev/vagrant/config/aiApps/jupter.yaml
+++ b/dev/vagrant/config/aiApps/jupter.yaml
@@ -37,4 +37,4 @@ attributes:
     name: workingDir
     label: 指定jupyter工作目录
     required: true
-    placeholder: "相对于用户家目录"
+    placeholder: "请填写绝对路径"
