--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -49,6 +49,7 @@
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/lib-web": "workspace:*",
+    "@scow/lib-server": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
