--- a/libs/server/package.json
+++ b/libs/server/package.json
@@ -20,7 +20,10 @@
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@grpc/grpc-js": "1.9.11",
     "nookies": "2.5.2",
-    "@scow/config": "workspace:*"
+    "@scow/config": "workspace:*",
+    "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/utils": "workspace:*",
+    "@scow/rich-error-model": "workspace:*"
   },
   "devDependencies": {
     "@ddadaal/tsgrpc-server": "0.19.5",
