创建应用时可自定义启动命令

--- a/apps/ai/config/ai/apps/jupter.yaml
+++ b/apps/ai/config/ai/apps/jupter.yaml
@@ -4,7 +4,7 @@ id: jupyter
 # 这个应用的名字
 name: jupyter
 
-logoPath: /apps/Jupyter.svg
+# logoPath: /apps/Jupyter.svg
 
 image:
   # 镜像名称
@@ -21,9 +21,12 @@ web:
     export PASSWORD=$(get_password 12)
     export SALT=123
     export PASSWORD_SHA1="$(echo -n "${PASSWORD}${SALT}" | openssl dgst -sha1 | awk '{print $NF}')"
+  # 指明运行任务的脚本中的启动命令，用户在创建应用页面可以在脚本中替换该命令
+  startCommand:
+    jupyter-lab
   # 运行任务的脚本。可以使用准备脚本定义的
   script: |
-    jupyter-lab --ServerApp.ip='0.0.0.0' --ServerApp.port=${PORT} --ServerApp.port_retries=0 --PasswordIdentityProvider.hashed_password="sha1:${SALT}:${PASSWORD_SHA1}" --ServerApp.open_browser=False --ServerApp.base_url="${PROXY_BASE_PATH}/${HOST}/${SVCPORT}/" --ServerApp.allow_origin='*' --ServerApp.disable_check_xsrf=True --ServerApp.root_dir="${workingDir}"
+    jupyter-lab --ServerApp.ip='0.0.0.0' --ServerApp.port=${PORT} --ServerApp.port_retries=0 --PasswordIdentityProvider.hashed_password="sha1:${SALT}:${PASSWORD_SHA1}" --ServerApp.open_browser=False --ServerApp.base_url="${PROXY_BASE_PATH}/${HOST}/${SVCPORT}/" --ServerApp.allow_origin='*' --ServerApp.disable_check_xsrf=True --ServerApp.root_dir="${workingDir}" --allow-root
   proxyType: absolute
   # 如何连接应用
   connect:
@@ -35,6 +38,6 @@ web:
 attributes:
   - type: text
     name: workingDir
-    label: 指定jupter工作目录
+    label: 指定jupyter工作目录
     required: true
     placeholder: "请填写绝对路径"
