--- a/dev/vagrant/config/ai/apps/vscode.yaml
+++ b/dev/vagrant/config/ai/apps/vscode.yaml
@@ -21,9 +21,17 @@ web:
   # 准备脚本
   beforeScript: |
     export PASSWORD=$(get_password 12)
+
+  # 指明运行任务的脚本中的启动命令，用户在创建应用页面可以在脚本中替换该命令
+  startCommand:
+    code-server
   # 运行任务的脚本。可以使用准备脚本定义的
   script: |
-    PASSWORD=$PASSWORD code-server -vvv --bind-addr 0.0.0.0:$PORT --auth password
+    PASSWORD=$PASSWORD
+    code-server
+    -vvv
+    --bind-addr 0.0.0.0:$PORT
+    --auth password
   proxyType: relative
   # 如何连接应用
   connect:
