--- a/dev/vagrant/config/ai/apps/jupter.yaml
+++ b/dev/vagrant/config/ai/apps/jupter.yaml
@@ -21,6 +21,9 @@ web:
     export PASSWORD=$(get_password 12)
     export SALT=123
     export PASSWORD_SHA1="$(echo -n "${PASSWORD}${SALT}" | openssl dgst -sha1 | awk '{print $NF}')"
+  # 指明运行任务的脚本中的启动命令，用户在创建应用页面可以在脚本中替换该命令
+  startCommand:
+    jupyter-lab
   # 运行任务的脚本。可以使用准备脚本定义的
   script: |
     jupyter-lab --ServerApp.ip='0.0.0.0' --ServerApp.port=${PORT} --ServerApp.port_retries=0 --PasswordIdentityProvider.hashed_password="sha1:${SALT}:${PASSWORD_SHA1}" --ServerApp.open_browser=False --ServerApp.base_url="${PROXY_BASE_PATH}/${HOST}/${SVCPORT}/" --ServerApp.allow_origin='*' --ServerApp.disable_check_xsrf=True --ServerApp.root_dir="${workingDir}" --allow-root
