fix: 修复 codemirror 导致的崩溃问题

--- a/renovate.json
+++ b/renovate.json
@@ -33,7 +33,8 @@
         "react-dom",
         "@types/react",
         "pino",
-        "turbo"
+        "turbo",
+        "@uiw/react-codemirror"
       ],
       "enabled": false
     }
