--- a/apps/cli/assets/init-full/config/mis.yaml
+++ b/apps/cli/assets/init-full/config/mis.yaml
@@ -41,8 +41,8 @@ createUser:
   # 是否允许用户从SCOW中创建用户
   enabled: true
 
-  # 是否允许账户管理员创建用户
-  enableAccountAdminUserCreation: true
+  # 是否允许账户管理员在添加用户至账户但用户不存在时创建用户
+  createUserIfNotExistWhenAddingUserToAccountAsAccountAdmin: true
 
   # SCOW中创建用户界面是使用内置的（builtin）或者使用外置页面（external）
   # 默认builtin
