--- a/apps/ai/config/ai/config.yaml
+++ b/apps/ai/config/ai/config.yaml
@@ -6,7 +6,7 @@ db:
   dbName: scow_ai
 
 harborConfig:
-  url: 10.129.227.64
-  project: test
-  user: admin
-  password: icode@2023CS
+  url: 10.0.0.xxx
+  project: projectName
+  user: user
+  password: password
